--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.14.21
 # Mod Properties
 mod_version=1.0.0
 maven_group=org.zhixiwiki
-archives_base_name=!darklocalizer
+archives_base_name=darklocalizer
 
 # Dependencies
 fabric_version=0.87.0+1.20.1
